Connect to DB using OOP

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 /07. API/env
 /08. MediaDownloader/env
 /08. MediaDownloader/lib/__pycache__
+/11. TelePayBot OOP/env
+/11. TelePayBot OOP/lib/__pycache__
+/10. TelePyBot/.vscode
+/10. TelePyBot/env
